<resources>
    <string name="app_name">5S Audit</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="delteAreaOk">Area was succesfully deleted</string>
    <string name="deleteTituloDialog">Delete Selected Area</string>
    <string name="elArea">The area: </string>
    <string name="deletePermanente">and related audits will be permanently deleted.</string>
    <string name="deseaContinuar">Do you wisht to continue?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ingreseUsuarioValido">Please enter a valid username.</string>
    <string name="ingreseContraseniaValida">Please enter a valid password.</string>
    <string name="caracteresContrasenia">Password must be at least 6 characters</string>
    <string name="contraseniasNoCoinciden">Passwords do not match.</string>
    <string name="bienvenido">Welcome </string>
    <string name="quieroReportar">I want to contact with e-5S team</string>
    <string name="enunciado11">1.1 Use of existing resources in places that are non- save locations</string>
    <string name="enunciado12">1.2 Use of existing resources in places that are to be saved</string>
    <string name="enunciado13">1.3 Conservation of facilities and resources</string>
    <string name="enunciado14">1.4 Control of conservation problems</string>
    <string name="enunciado21">2.1 Identification and signage</string>
    <string name="enunciado22">2.2 Definition and adaptation of places to store resources.</string>
    <string name="enunciado23">2.3 Order of the resources</string>
    <string name="enunciado24">2.4 Layout</string>
    <string name="enunciado31">3.1 Level of cleaning (dirt caused by people)</string>
    <string name="enunciado32">3.2 Level of cleaning (dirt caused by the process or the external spaces)</string>
    <string name="enunciado33">3.3 Cleaning standard</string>
    <string name="enunciado34">3.4 Garbage baskets And other discart collectors</string>
    <string name="enunciado41">4.1. Standardization of Paints, Identifications and Signsed
</string>
    <string name="enunciado42">4.2. Hygiene and health
</string>
    <string name="enunciado43">4.3. Routines and Systematics for Maintenance of 5S
</string>
    <string name="enunciado44">4.4. Systematic of saving for electronic documents
</string>
    <string name="enunciado51">5.1. Self-discipline in the practice of 5S
</string>
    <string name="enunciado52">5.2. Self-discipline in compliance with rules and procedures
</string>
    <string name="enunciado53">5.3. Attitude of people
</string>
    <string name="enunciado54">5.4. Self-discipline in the storage of electronic documents (if any)
</string>
    <string name="punto111">In several places, several anomalies were found in the use of resources (excessive proportions, improvisations, unnecessary resources, lack or waste)</string>
    <string name="punto112">In several places, some anomalies were found in the use of resources (excessive proportions, improvisations, unnecessary resources, lack or waste).
</string>
    <string name="punto113">In some places, several anomalies were found in the use of resources (excessive proportions, improvisations, unnecessary resources, lack or waste).</string>
    <string name="punto114">In some places, some anomalies were found in the use of resources (excessive proportions, improvisations, unnecessary resources, lack or waste).
</string>
    <string name="punto115">"every resources on floors, tables and other open space are used properly (no excess, improvisations, unnecessary resources, lack or waste).
There may be insignificant irregularities."</string>
    <string name="punto121">In several places, several anomalies were found in the use of resources (excessive proportions, improvisations, unnecessary resources, lack or waste)</string>
    <string name="punto122">In several places, some anomalies were found in the use of resources (excessive proportions, improvisations, unnecessary resources, lack or waste).</string>
    <string name="punto123">In some places, several anomalies were found in the use of resources (excessive proportions, improvisations, unnecessary resources, lack or waste).</string>
    <string name="punto124">In some places, some anomalies were found in the use of resources (excessive proportions, improvisations, unnecessary resources, lack or waste).</string>
    <string name="punto125">"Every resources in closets, drawers and other enclosed spaces are shared and used correctly  (no excess, improvisations, unnecessary resources, lack or waste).
There may be insignificant irregularities.</string>
    <string name="punto131">There are widespread conservation problems and some compromise the safety or functionality of facilities and resources, according to environmental characteristics.</string>
    <string name="punto133">There are conservation problems in some facilities or resource. some compromises the safety or functionality, according to environmental characteristics.</string>
    <string name="punto132">There are widespread conservation problems but not compromise the safety or functionality of facilities and resources, according to environmental characteristics.</string>
    <string name="punto134">There are conservation problems in some facilities or resource but not compromises the safety or functionality, according to environmental characteristics.</string>
    <string name="punto135">All facilities and resources are in good condition. There may be insignificant irregularities for the characteristics of the environment.</string>
    <string name="punto141">There is no formal justification for most conservation problems encountered</string>
    <string name="punto142">There is no formal justification for some conservation problems, including for some that compromises the safety or functionality of facilities and resources, according to environmental characteristics.</string>
    <string name="punto143">There is no formal justification for some conservation problems, but it does not compromises the safety or functionality of facilities and resources, according to environmental characteristics.</string>
    <string name="punto144">There is no formal justification for one conservation problem, but it does not compromis the safety or functionality of facilities and resources, according to environmental characteristics.</string>
    <string name="punto145">There is a formal justification for all conservation problems and none of them compromise the safety or functionality of facilities and resources. There may be insignificant irregularities for the characteristics of the environment.</string>
    <string name="punto211">In several places there are deficiencies of identification and signaling. There is no plan for the correction of most of the deficiences</string>
    <string name="punto212">In several places there are deficiencies of identification and signaling. There is no plan for the correction some of them.</string>
    <string name="punto213">In some places there are deficiencies of identification and signaling. There is no plan for the correction some of them.</string>
    <string name="punto214">In some places there are deficiencies of identification and signaling. There is a plan for the correction of them</string>
    <string name="punto215">In all places there are identifications and signage  that facilitate the location and avoid the loss of time and risks. There may be insignificant irregularities for the characteristics of the environment.</string>
    <string name="punto221">In several places there are several resources without defined  and suitable places for their storage (format, dimensions, type of material, etc.).</string>
    <string name="punto222">In several places there are some resources without defined  and suitable places for their storage (format, dimensions, type of material, etc.).</string>
    <string name="punto223">In some places there are several resources without defined  and suitable places for their storage (format, dimensions, type of material, etc.).</string>
    <string name="punto224">In some places there are some resources without defined  and suitable places for their storage (format, dimensions, type of material, etc.).</string>
    <string name="punto225">There are defined and suitable places for all the resources used (format, dimensions, type of material, etc.). There may be insignificant irregularities for the characteristics of the environment.</string>
    <string name="punto231">In several places were found several resources disordered, making access difficult (there are useful resources outside the places of store, mixture, difficulty of visual identification or risk problems).</string>
    <string name="punto232">In several places were found some resources disordered, making access difficult (there are useful resources outside the places of store, mixture, difficulty of visual identification or risk problems).</string>
    <string name="punto233">In some places were found several resources disordered, making access difficult (there are useful resources outside the places of store, mixture, difficulty of visual identification or risk problems).</string>
    <string name="punto234">In some places were found some resources disordered, making access difficult (there are useful resources outside the places of store, mixture, difficulty of visual identification or risk problems).</string>
    <string name="punto235">All resources are classified and organized (there are no resources available outside of storage places, mixed, difficulty of visual location or risk problems).There may be insignificant irregularities for the characteristics of the environment.</string>
    <string name="punto241">In several places there are design deficiencies that promote fatigue, risks and lost time (planned distribution of productive and / or support resources, hampering circulation and access, incompatible space or volume, etc.). There is no plan for the correction of the majority.</string>
    <string name="punto242">In several places there are design deficiencies that promote fatigue, risks and lost time (planned distribution of productive and / or support resources, hampering circulation and access, incompatible space or volume, etc.). There is no plan for the correction some of them.</string>
    <string name="punto243">In some places there are design deficiencies that promote fatigue, risks and lost time (planned distribution of productive and / or support resources, hampering circulation and access, incompatible space or volume, etc.). There is no plan for the correction some of them.</string>
    <string name="punto244">In some places there are design deficiencies that promote fatigue, risks and lost time (planned distribution of productive and / or support resources, hampering circulation and access, incompatible space or volume, etc.). There is a plan for the correction of them</string>
    <string name="punto245">The location of all productive and support resources is appropriate, facilitates movement and / or access, avoiding risks, fatigue and loss of time. It may have insignificant irregularities for the characteristics of the environment.</string>
    <string name="punto311">In several places there is dirt, all caused by the people of the area</string>
    <string name="punto312">In several places there is  dirt, some provoked by the people of the area or by non compliance with the cleaning routine.</string>
    <string name="ResultadoFinal">Final result.</string>
    <string name="fecha">Date:</string>
    <string name="score">Score:</string>
    <string name="target">Target</string>
    <string name="auditResult">Audit result</string>
    <string name="titulo">Title:</string>
</resources>