<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingStart="@dimen/margenMini"
    android:paddingEnd="@dimen/margenMini"
    android:background="@color/blancoNomad"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nomad.audit5s.fragments.FragmentRevisarAuditoria">
    
    <LinearLayout
        android:layout_marginTop="@dimen/margenChico"
        android:layout_marginBottom="@dimen/margenChico"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:maxLines="2"
            android:textSize="@dimen/textoAreaRevisarAudit"
            android:layout_marginTop="@dimen/margenMicro"
            android:layout_marginBottom="@dimen/margenMini"
            android:textColor="@color/tile5"
            android:id="@+id/tituloVerAudit"
            android:gravity="start|center_vertical"
            android:text="@string/titulo"
            android:layout_width="0dp"
            android:layout_weight="50"
            android:layout_height="wrap_content" />
        

        <LinearLayout
            android:layout_weight="50"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="12sp"
                    android:text="@string/score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:gravity="center"
                    android:layout_weight="20"
                    android:textSize="16sp"
                    android:id="@+id/puntajeVerAudit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                android:textSize="12sp"
                android:text="@string/fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView

                android:gravity="center"
                android:layout_weight="30"
                android:textSize="16sp"

                android:id="@+id/fechaAuditVerAudit"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
        
    </LinearLayout>
    
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
    
                <TextView
                    android:lines="2"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/margenMini"
                    android:background="@color/tile2"
                    android:layout_weight="80"
                    android:id="@+id/subitem1VerAudit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                
                <TextView
                    android:background="@color/tile3"
                    android:textAlignment="center"
                    android:layout_gravity="start|top"
                    android:layout_weight="10"
                    android:textColor="@color/tile1"
                    android:textSize="20sp"
                    android:id="@+id/score1sVerAudit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginBottom="@dimen/margenChico"
                android:id="@+id/recycler1sVerAudit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>
            <!--SEGUNDO SUBITEM-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:lines="2"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/margenMini"
                    android:background="@color/tile2"
                    android:layout_weight="80"
                    android:id="@+id/subitem2VerAudit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

                
                <TextView
                    android:background="@color/tile3"
                    android:textAlignment="center"
                    android:layout_gravity="start|top"
                    android:layout_weight="10"
                    android:textColor="@color/tile1"
                    android:textSize="20sp"
                    android:id="@+id/score2sVerAudit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginBottom="@dimen/margenChico"
                android:id="@+id/recycler2VerAudit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>
            <!--TERCER SUBITEM-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:lines="2"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/margenMini"
                    android:background="@color/tile2"
                    android:layout_weight="80"
                    android:id="@+id/subitem3VerAudit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

               
                <TextView
                    android:background="@color/tile3"
                    android:textAlignment="center"
                    android:layout_gravity="start|top"
                    android:layout_weight="10"
                    android:textColor="@color/tile1"
                    android:textSize="20sp"
                    android:id="@+id/score3sVerAudit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginBottom="@dimen/margenChico"
                android:id="@+id/recycler3VerAudit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>
            <!--CUARTO SUBITEM-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:lines="2"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/margenMini"
                    android:background="@color/tile2"
                    android:layout_weight="80"
                    android:id="@+id/subitem4VerAudit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

         
                <TextView
                    android:background="@color/tile3"
                    android:textAlignment="center"
                    android:layout_gravity="start|top"
                    android:layout_weight="10"
                    android:textColor="@color/tile1"
                    android:textSize="20sp"
                    android:id="@+id/score4sVerAudit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginBottom="@dimen/margenGrande"
                android:id="@+id/recycler4VerAudit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>
    </ScrollView>
</LinearLayout>
